...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Happy Shopping, {username}!"
        android:textSize="18sp"
        android:textStyle="bold"
...
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <!-- User Cart Button -->

    <!-- View History Button -->
    <Button
        android:id="@+id/btn_cart"
        android:layout_width="223dp"
        android:layout_height="65dp"
        android:layout_marginTop="68dp"
        android:text="User Cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
