...
                    android:hint="@string/login_as"
                    app:boxBackgroundColor="@color/white"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/colorPrimary">

                    <AutoCompleteTextView
                        android:id="@+id/actvUserType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@color/colorPrimaryDark" />
                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/tvSignUp"
...
