...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_store"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_add_store"
                    app:iconGravity="textStart"
...
